<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent">


    <ImageView
        android:id="@+id/museumPic"
        android:layout_width="wrap_content"
        android:layout_height="275dp"

        android:layout_margin="0dp"
        android:padding="0dp"

        android:src="@drawable/museum_home"

        app:layout_constraintBottom_toBottomOf="parent"


        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/museumTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/museumTitle"
        app:layout_constraintBottom_toBottomOf="parent"

        android:textSize="26sp"
        android:textStyle="bold"
        android:textAlignment="center"

        app:layout_constraintTop_toBottomOf="@id/museumPic"
        app:layout_constraintVertical_bias="0.05"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/museumDescription"

        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textAlignment="center"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/museumTitle"
        app:layout_constraintVertical_bias="0.092"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/goToTickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="28dp"
        android:backgroundTint="@color/brown_light"
        android:onClick="tickets"
        android:text="@string/go_to_tickets"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>